# battlecity-online

./: .gitignore  CMakeLists.txt  README.md
client/: connection.py  level.py  message.py  stage.py  tank.py
client/font/: __init__.py
client/image/: __init__.py
client/model/: __init__.py  bullet.py  explosion.py  map.py  screen.py  stats.py  tank.py
client/sound/: __init__.py
client/test/: test_drawablesequence.py
server/: CMakeLists.txt
server/src/: bt_consentbox.cpp  bt_consentbox.h  bt_gamecontainer.cpp  bt_gamecontainer.h  bt_level.cpp  bt_level.h  bt_map.cpp  bt_map.h  bt_message.h  bt_model.cpp  bt_model.h  bt_player.cpp  bt_player.h  bt_process.cpp  bt_process.h  bt_server.cpp  bt_server.h  bt_socket.cpp  bt_socket.h  bt_tank.cpp  bt_tank.h  bt_util.h  main.cpp
server/src/levels/: 1  3
server/test/: bt_consentbox.t.cpp  bt_map.t.cpp  bt_model.t.cpp  bt_tank.t.cpp
